<resources>
    <string name="unAuthorized">unAuthorized</string>
    <string name="invalidUserOrPass">invalidUserOrPass</string>
    <string name="wait">wait</string>
    <string name="OK" translatable="false">OK</string>
    <string name="sendError">sendError</string>
    <string name="cancel">Cancel</string>
    <string name="notFound">not found</string>
    <string name="token_timeout">Phiên giao dịch hết hạn</string>
    <string name="no_internet_title">Cannot connect</string>
    <string name="no_internet_body">Please check your network connection</string>
    <string name="wifi_on">Wifi</string>
    <string name="mobile_data">Mobile data</string>
    <string name="airplane">Airplane mode</string>
    <string name="airplane_on">Airplane mode is on</string>
    <string name="PHONE_NUMBER">Phone number</string>
    <string name="password"> Password</string>
    <string name="enter_the_account_and_password_you_registered">Enter the account and password you registered</string>
    <string name="no_account_sign_up_now">No account, sign up now</string>
    <string name="login">Login</string>
    <string name="mstore_account">Mstore account</string>
    <string name="refresh">Refresh</string>
    <string name="or">or</string>
    <string name="active_account">Account active</string>
    <string name="experience_now">Experience now</string>
    <string name="sign_in_if_you_already_have_an_account_or_create_new">Sign in if you already have an account. \n Or create new</string>
    <string name="sign_up_lib">Sign Up</string>
    <string name="active_code_l2">Enter the referral code</string>
    <string name="notice">Notice</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="sign_out_now">Sign out now</string>
    <string name="for_your_safety_reason_you_will_be_signed_out_now">For your safety reason, you will be signed out now</string>
</resources>
