<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.tsolution.base.ErrMsg" />

        <import type="android.view.View" />

        <variable
            name="listener"
            type="com.tsolution.base.listener.AdapterListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:background="@drawable/bg_request_time_out"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/notice"
                android:textColor="@color/title_text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:textColor="#3A3E41"
                android:textSize="16sp"
                android:text="@string/for_your_safety_reason_you_will_be_signed_out_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:id="@+id/btnRefresh"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="#289767"
                android:text="@string/stay_signed_in"
                android:textColor="@color/colorWhite"
                app:cornerRadius="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMsg"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/sign_out_now"
                android:textColor="#3A8CFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRefresh" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</layout>

