<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_medium">

    <FrameLayout
        android:background="@color/white_medium"
        android:id="@+id/root1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_small"
            app:srcCompat="@drawable/ic_cancel_white_24dp"
            tools:ignore="VectorDrawableCompat" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/plane"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="?selectableItemBackground"
            android:padding="@dimen/margin_medium"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/plan" />


    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_horizontal_guide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_vertical_guide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tomb1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guide"
        app:srcCompat="@drawable/an2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tomb"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guide"
        app:srcCompat="@drawable/an1" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_internet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_medium"
        android:text="@string/no_internet_title"
        android:textStyle="bold"
        android:textColor="@color/title_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/end_guide"
        app:layout_constraintStart_toStartOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/tomb" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_internet_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0.7"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/no_internet_body"
        android:textColor="@color/item_off"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/end_guide"
        app:layout_constraintStart_toStartOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/no_internet" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/wifi_on"
        style="@style/roundedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:drawableStart="@drawable/ic_wifi_white"
        android:drawableLeft="@drawable/ic_wifi_white"
        android:text="@string/wifi_on"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
        app:layout_constraintEnd_toStartOf="@id/center_vertical_guide"
        app:layout_constraintStart_toStartOf="@id/start_guide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mobile_on"
        style="@style/roundedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:drawableStart="@drawable/ic_4g_white"
        android:drawableLeft="@drawable/ic_4g_white"
        android:text="@string/mobile"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
        app:layout_constraintEnd_toEndOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/center_vertical_guide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/airplane_off"
        style="@style/roundedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:drawableStart="@drawable/ic_airplane_off"
        android:drawableLeft="@drawable/ic_airplane_off"
        android:text="@string/airplane"
        android:textAllCaps="false"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
        app:layout_constraintEnd_toEndOf="@id/end_guide"
        app:layout_constraintStart_toStartOf="@id/start_guide" />

    <ProgressBar
        android:id="@+id/wifi_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>